--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,3 +15,42 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 img {
   max-width: 100%;
 }
+
+#header{
+  #header-image{
+    height: 500px;
+    background-image: url('../images/headshot-2.jpg');
+    background-position: center;
+    background-size: cover;
+  }
+}
+#artist-content{
+  position: relative;
+  bottom: 100px;
+  background-color: #fff;
+  #artist-title{
+    text-transform: uppercase;
+    text-align: center;
+    background-color: #fff;
+    height: 100px;
+  }
+  #about{
+    margin-top: 50px;
+    #about-img{
+      height: 300px;
+      background-image: url('../images/headshot-1.jpg');
+      background-position: top;
+      background-size: cover;
+    }
+    #about-par{
+      p{
+        line-height: 2;
+      }
+    }
+  }
+  .video{
+    margin-left: -30px;
+    margin-right: -30px;
+    margin-bottom: -25px;
+  }
+}
