--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -140,22 +140,27 @@ body{
 /*SLIDER*/
 .slider{
   z-index: 0;
+  text-shadow: 0px 1px 8px #000000;
 }
 .indicators{
   display: none;
 }
 
 /*REVIEWS*/
-#reviews{
-  box-shadow: none;
-  border: none;
-  #review-text{
-    font-size: 12px;
-  }
-  #reviewer{
-    font-weight: bold;
+#about-reviews{
+  box-shadow: 0px 2px 4px 1px grey;
+  #reviews{
+    box-shadow: none;
+    border: none;
+    #review-text{
+      font-size: 14px;
+    }
+    #reviewer{
+      font-weight: bold;
+    }
   }
 }
+
 /********** FOOTER ****************/
 
 .page-footer{
