--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -21,6 +21,7 @@ p{
 
 #headings{
   font-family: 'Raleway', sans-serif;
+  color: #DD2C00;
 }
 
 /********** HEADER ****************/
@@ -31,7 +32,7 @@ p{
 }
 
 body{
-  background-image: url('../images/background-1.jpg');
+  background-image: url('../images/background-2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -42,6 +43,8 @@ body{
     color: #000;
     font-family: 'Great Vibes', cursive;
     padding-left: 15px;
+    color: #DD2C00;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.29);
   }
   a{
     color: #000;
@@ -83,6 +86,9 @@ body{
     font-family: 'Great Vibes', cursive;
     text-align: center;
     background-color: #fff;
+    color: #DD2C00;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.29);
+
     span{
       font-size: 25px;
       position: relative;
@@ -138,9 +144,16 @@ body{
 /***********STUDIO PAGE**********/
 
 /*SLIDER*/
-.slider{
+#slider-pane{
   z-index: 0;
-  text-shadow: 0px 1px 8px #000000;
+  height: 450px;
+  h3{
+    color: #FFFFFF;
+    text-shadow: 0px 1px 8px #000000;
+  }
+  #slides{
+    height: 550px;
+  }
 }
 .indicators{
   display: none;
