--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,6 +29,14 @@ p{
   margin-bottom: 30px;
 
 }
+// .open{
+//   background-color: #fff;
+// }
+// .modal-content{
+//   box-shadow: none;
+//   border: none;
+//   border-radius: none;
+// }
 
 
 
