--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,7 +15,9 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 //********* GENERAL ***************/
 p{
   font-family: 'Raleway', sans-serif;
-  font-size: 15px;
+}
+#primary-text{
+  font-size: 3vmin;
   line-height: 2;
 }
 
@@ -115,12 +117,12 @@ body{
   }
   /*ABOUT SECTION*/
   #about{
-    margin-top: 30px;
+    margin-top: 50px;
     margin-bottom: 40px;
     #about-img{
       border-radius: 100%;
-      height: 300px;
-      width: 300px;
+      height: 25vw;
+      width: 25vw;
       // height: 300px;
       background-image: url('../images/headshot-1.jpg');
       background-position: top;
@@ -131,13 +133,13 @@ body{
     }
     #studio-about-img{
       border-radius: 100%;
-      height: 300px;
-      width: 300px;
+      height: 25vw;
+      width: 25vw;
       // height: 300px;
       background-image: url('../images/eranga-piano.jpg');
       background-position: top;
       background-size: cover;
-      margin-right: 35px;
+      // margin-right: 35px;
       margin-top: 30px;
       margin-bottom: 20px;
       filter: brightness(2);
