--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,11 +16,16 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 p{
   font-family: 'Raleway', sans-serif;
 }
+
+a:hover{
+  text-decoration: none;
+  text-shadow: 0px 1px 1px rgba(107, 98, 98, 0.5);
+}
+
 #primary-text{
   font-size: 3vmin;
   line-height: 2;
 }
-
 #headings{
   font-family: 'Raleway', sans-serif;
   color: #DD2C00;
@@ -29,7 +34,14 @@ p{
 .divider{
   margin-top: 30px;
   margin-bottom: 30px;
+}
 
+#pages{
+  animation: fadein 2s;
+  @keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
 }
 // .open{
 //   background-color: #fff;
@@ -66,6 +78,20 @@ body{
   }
   a{
     color: #000;
+  }
+  li:hover{
+    background-color: #DD2C00;
+    position: relative;
+    bottom: 2px;
+    border-bottom: 2px solid #FFD600;
+    animation: fadein 1s;
+    @keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+    }
+    a{
+      color: #fff;
+    }
   }
 }
 
