--- a/css/app.css
+++ b/css/app.css
@@ -5766,6 +5766,10 @@ button.close {
 p {
   font-family: 'Raleway', sans-serif; }
 
+a:hover {
+  text-decoration: none;
+  text-shadow: 0px 1px 1px rgba(107, 98, 98, 0.5); }
+
 #primary-text {
   font-size: 3vmin;
   line-height: 2; }
@@ -5778,6 +5782,19 @@ p {
   margin-top: 30px;
   margin-bottom: 30px; }
 
+#pages {
+  -webkit-animation: fadein 2s;
+          animation: fadein 2s; }
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 /********** HEADER ****************/
 #header .parallax-container {
   height: 600px; }
@@ -5796,6 +5813,20 @@ body {
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.29); }
 .nav-wrapper a {
   color: #000; }
+.nav-wrapper li:hover {
+  background-color: #DD2C00;
+  position: relative;
+  bottom: 2px;
+  border-bottom: 2px solid #FFD600;
+  -webkit-animation: fadein 1s;
+          animation: fadein 1s; }
+@keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+  .nav-wrapper li:hover a {
+    color: #fff; }
 
 /******** SOCIAL **********/
 #social-icons-pane {
