--- a/css/app.css
+++ b/css/app.css
@@ -5808,6 +5808,12 @@ a:hover {
     opacity: 0; }
   to {
     opacity: 1; } }
+.modal-content {
+  box-shadow: none;
+  border: none;
+  border-radius: none;
+  z-index: 1; }
+
 /********** HEADER ****************/
 #header .parallax-container {
   height: 600px; }
@@ -5901,6 +5907,19 @@ a:hover {
   #content #perfomance-imgs {
     margin-top: 80px;
     margin-bottom: 30px; }
+    #content #perfomance-imgs .performance-cards {
+      border-radius: 100%;
+      height: 20vw;
+      width: 20vw;
+      margin: 10px;
+      background-size: cover;
+      background-position: center; }
+    #content #perfomance-imgs .left-side {
+      background-image: url("../images/performance-2.jpg"); }
+    #content #perfomance-imgs .middle-side {
+      background-image: url("../images/performance-1.jpg"); }
+    #content #perfomance-imgs .right-side {
+      background-image: url("../images/performance-3.jpg"); }
   #content #artist-video {
     margin-top: 100px; }
   #content #link-cards-pane {
