--- a/css/app.css
+++ b/css/app.css
@@ -5764,8 +5764,7 @@ button.close {
   box-sizing: border-box; }
 
 body {
-  background: -webkit-linear-gradient(315deg, #89e6e1 0%, #d9d968 60%, #7bd2a0 84%, #3ccdc6 100%);
-  background: linear-gradient(135deg, #89e6e1 0%, #d9d968 60%, #7bd2a0 84%, #3ccdc6 100%);
+  background-image: url("../images/background-3.jpg");
   background-size: cover;
   background-repeat: no-repeat; }
 
@@ -5786,6 +5785,10 @@ p {
 #headings {
   font-family: 'Raleway', sans-serif;
   color: #DD2C00; }
+
+#subheadings {
+  font-family: 'Raleway', sans-serif;
+  color: grey; }
 
 a:hover {
   text-decoration: none;
@@ -5961,10 +5964,6 @@ a:hover {
     text-transform: uppercase;
     color: #DD2C00;
     margin-bottom: 10%; }
-#announcements-pane #announcement-card {
-  margin-bottom: 30px;
-  min-height: 400px;
-  max-height: 500px; }
 
 /********** GALLERY ****************/
 #media-li {
