--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -104,12 +104,17 @@ a:hover{
 #social-icons-pane{
   position: relative;
   top: 25%;
-  li{
-    color: #fff;
-    font-size: 30px;
-    margin-bottom: 20px;
-    a{
-      background-color: #DD2C00;
+  ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    li{
+      color: #fff;
+      font-size: 30px;
+      margin-bottom: 20px;
+      a{
+        background-color: #DD2C00;
+      }
     }
   }
 }
@@ -183,8 +188,13 @@ a:hover{
   }
   /*PERFORMANCE PICS SECTION*/
   #perfomance-imgs{
-    margin-top: 80px;
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    .performance-imgs-ul{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+    }
     .performance-cards{
       border-radius: 100%;
       height: 20vw;
@@ -210,8 +220,8 @@ a:hover{
 
   /************LINK CARDS PANE **************/
   #link-cards-pane{
-    margin-top: 100px;
-    margin-bottom: 30px;
+
+
     #link-cards{
       padding: 5px;
       background-size: cover;
@@ -297,11 +307,23 @@ a:hover{
 
 
 /********** GALLERY ****************/
-#media-li{
-  margin-bottom: 20px;
+/**ADDED when trying flex**/
+.media-ul{
+  display: flex;
+flex-wrap: wrap;
+    justify-content: flex-start;
+    justify-items: center;
+}
+/*********************/
+.media-li{
+  margin: 20px;
+
   img{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.29);
   }
+}
+.responsive-img{
+   width: 300px;
 }
 
 /********** FOOTER ****************/
