--- a/css/app.css
+++ b/css/app.css
@@ -5772,6 +5772,9 @@ p {
   font-family: 'Raleway', sans-serif;
   font-size: 16px; }
 
+.btn-floating i {
+  background-color: #DD2C00; }
+
 #primary-text {
   line-height: 2;
   opacity: .87;
@@ -5813,7 +5816,7 @@ a:hover {
     opacity: 1; } }
 /********** HEADER ****************/
 #header .parallax-container {
-  height: 600px; }
+  height: 800px; }
 
 /******** NAV **********/
 .nav-wrapper .brand-logo {
@@ -5840,15 +5843,50 @@ a:hover {
     color: #fff; }
 
 /******** SOCIAL **********/
-#social-icons-pane {
+#social-pane {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
-  top: 25%; }
-  #social-icons-pane li {
-    color: #fff;
-    font-size: 30px;
-    margin-bottom: 20px; }
-    #social-icons-pane li a {
-      background-color: #DD2C00; }
+  top: 25%;
+  height: 400px; }
+
+#social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  #social-icons ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end; }
+    #social-icons ul li {
+      color: #fff;
+      font-size: 30px;
+      margin-bottom: 20px; }
+      #social-icons ul li a {
+        background-color: #DD2C00; }
 
 /******** MAIN ***************/
 .main {
@@ -5902,8 +5940,18 @@ a:hover {
       -webkit-filter: brightness(2);
               filter: brightness(2); }
   #content #perfomance-imgs {
-    margin-top: 80px;
-    margin-bottom: 30px; }
+    margin-top: 30px;
+    margin-bottom: 10px; }
+    #content #perfomance-imgs .performance-imgs-ul {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -ms-flex-pack: distribute;
+          justify-content: space-around; }
     #content #perfomance-imgs .performance-cards {
       border-radius: 100%;
       height: 20vw;
@@ -5919,24 +5967,19 @@ a:hover {
       background-image: url("../images/performance-3.jpg"); }
   #content #artist-video {
     margin-top: 100px; }
-  #content #link-cards-pane {
-    margin-top: 100px;
-    margin-bottom: 30px; }
-    #content #link-cards-pane #link-cards {
-      padding: 5px;
-      background-size: cover;
-      background-position: center top; }
+  #content #link-cards-pane #link-cards {
+    padding: 5px;
+    background-size: cover;
+    background-position: center top; }
 
 /***********STUDIO PAGE**********/
 /*SLIDER*/
 #slider-pane {
-  z-index: 0;
-  height: 450px; }
+  height: 700px;
+  z-index: 0; }
   #slider-pane h3 {
     color: #FFFFFF;
     text-shadow: 0px 1px 8px #000000; }
-  #slider-pane #slides {
-    height: 550px; }
 
 .indicators {
   display: none; }
@@ -5966,10 +6009,36 @@ a:hover {
     margin-bottom: 10%; }
 
 /********** GALLERY ****************/
-#media-li {
-  margin-bottom: 20px; }
-  #media-li img {
+/**ADDED when trying flex**/
+#gallery-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin: 30px; }
+
+.media-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+/*********************/
+.media-li {
+  margin: 20px; }
+  .media-li img {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.29); }
+
+.responsive-img {
+  width: 300px; }
 
 /********** FOOTER ****************/
 .page-footer {
@@ -5979,6 +6048,6 @@ a:hover {
   .page-footer #social-icons-footer {
     margin-top: 20px; }
     .page-footer #social-icons-footer i {
-      color: #DD2C00;
       font-size: 1.6rem; }
+
 /*# sourceMappingURL=app.css.map */
